Multiple bug fixes - inability to enter certain prices and amounts with the necessary precision, messages not appearing upon creation of a menu item, the purchase log now does not hold a direct foreign key reference to the menu item as that adds no meaningful value and makes the records persisting harder if a menu item is deleted. Some overflow issues with the purchase record and menu_item creation views handled.

--- a/Django_Delights_App/restaurant/static/restaurant/style.css
+++ b/Django_Delights_App/restaurant/static/restaurant/style.css
@@ -77,13 +77,15 @@ header div {
 }
 
 #view {
+    height: 550px;
     justify-self: center;
     align-self: center;
     grid-area: view;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
+    overflow: scroll;
+    scroll-behavior: smooth;
     border-radius: 10px;
     background: rgb(0, 0, 0, 0.3);
     backdrop-filter: blur(10px);
@@ -111,13 +113,11 @@ td, th {
 
 form {
     width: 600px;
+    height: 500px;
     padding: 20px;
     display: flex;
     flex-direction: column;
     align-items: safe center;
-    border: 1px solid white;
-    overflow-y: scroll;
-    scroll-behavior: smooth;
 }
 
 form p {
